# at-command

./: .dockerignore  .gitignore  CLAUDE.md  README.md  TASK.md  justfile  pyproject.toml
.claude/skills/: terminal-session.md
docs/: at-command-spec.md
docs/backlog/: README.md  exploratory-pipeline-builder.md  exploratory-self-improving.md  exploratory-shell-history-context.md  exploratory-streaming-ghost-text.md  exploratory-teachable-vocabulary.md  inbox.md  tactical-ambiguity-handling.md  tactical-available-tools-context.md  tactical-custom-prompt.md  tactical-danger-warnings.md  tactical-description-sanitization.md  tactical-doctor.md  tactical-explain-mode.md  tactical-history-compliance.md  tactical-multi-candidate.md  tactical-regenerate.md
docs/backlog/archive/: tactical-json-response-format.md
shell/: at-cmd.bash  at-cmd.fish  at-cmd.ps1  at-cmd.zsh
src/at_cmd/: __init__.py  cli.py  config.py  detect.py  init.py  keybindings.py  llm.py  sanitize.py  session.py  spinner.py  tui.py
tests/: conftest.py  test_cli.py  test_config.py  test_detect.py  test_init.py  test_integration_claude.py  test_keybindings.py  test_llm.py  test_sanitize.py  test_session.py  test_windows.py
tests/e2e/: __init__.py  harness.py  test_basic.py
tests/shells/: Dockerfile  docker-compose.yml  mock-at-cmd  run_all.sh  test_bash.sh  test_fish.sh  test_zsh.sh
