[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at-cmd"
version = "0.1.0"
description = "OS/shell-aware natural language to shell command translator"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "textual>=1.0",
]

[project.scripts]
at-cmd = "at_cmd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/at_cmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14",
]
